[workspace]
members = [
    "1_IP",
    "2_Reed_Solomon_Fingerprinting",
    "2_Freivalds_Algorithm",
    "2_univariate_lagrange_interpolation",
    "3_multilinear_lagrange_interpolation",
    "4_sumcheck",
    "4_GKR",
    "5_Fiat_Shamir",
    "5_ni_sumcheck",
    "10_IOP-based-pcs",
    "10_r1cs_IOP",
]

resolver = "2"