[package]
name = "uni_sumcheck"
version = "0.1.0"
edition = "2021"
description = "univariate sumcheck"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.13.0"
bls12_381 = "0.8.0"
rand = "0.8.5"
rand_core = { version = "0.6.4", default-features = false, features = ["std"] }
rayon = "1.7.0"
log = "0.4.19"
sha3 = "0.10.6"
