[package]
name = "Merkle_tree_commitment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numeric = "0.1.3"
rand = "0.8.5"
rand_core = { version = "0.6.4", default-features = false, features = ["std"] }